--- a/src/main/resources/templates/sessao.html
+++ b/src/main/resources/templates/sessao.html
@@ -1,14 +1,9 @@
 <!DOCTYPE html>
-<html 
-	xmlns="http://www.w3.org/1999/xhtml" 
-	xmlns:th="http://www.thymeleaf.org"
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
->
+<html>
 <head>
 	<meta charset="ISO-8859-1">
-	<link href="/webjars/materializecss/0.97.7/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 	
-	<title>FutManager</title>
+	<title>Sessão</title>
 </head>
 <body>
 	<div class = "row card-panel grey lighten-2 black-text ">
