--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,33 +1,59 @@
 <!DOCTYPE html>
-<html 
-	xmlns = "http://www.w3.org/1999/xhtml"
-	xmlns:th = "http://www.thymeleaf.org"
-	xmlns:layout = "http://www.ultraq.net.nz/thymeleaf/layout"
->
+<html>
 
 <head>
-	<link href="/webjars/materializecss/0.97.7/css/materialize.css" type="text/css"
-	 rel="stylesheet" media="screen,projection"/>
-	 
-	 <title>FutManager</title>
+	 <link href="css/bootstrap.min.css" rel="stylesheet">
+	 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
+	 		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	 <meta charset="utf-8">
+	 <title>Cinema</title>
 </head>
 	
 <body>
-	<div class= "container">
+	<div class="jumbotron">
+		<div class="container">
+			<h1>Cinema WEB</h1>
+			<h3 class = "header col s12 light">Sistema de Controle e Gerenciamento de Cinema</h3> 
+		</div>
+	</div>
 	
-		<div class = "row center">
-			<h1 class = "header center green-text">FutManager</h1>
-			<h5 class = "header col s12 light">Sistema de Controle de Times e Jogadores</h5> 
+	<div class="container">
+		<div class="row" >
+	
+			<form class="col-sm-12 col-lg-12" >
+				<div class = "row">
+					<fieldset>
+						<legend>Menu</legend>
+						
+						<div class= "container ">
+							<div class = "row center col-lg-12">
+								<a href="/sessao/" class="btn btn-success btn-lg" role="button">Menu Sessão</a>
+								<a href="/cinema/" class="btn btn-success  btn-lg" role="button">Menu Cinema</a>
+								<a href="/filme/" class="btn btn-success  btn-lg" role="button">Menu Filme</a>
+								<a href="/sala/" class="btn btn-success  btn-lg" role="button">Menu Sala</a>
+								<a href="/genero/" class="btn btn-success  btn-lg" role="button">Menu Genero</a>
+								<a href="/diretor/" class="btn btn-success  btn-lg" role="button">Menu Diretor</a>
+								<a href="/ator/" class="btn btn-success  btn-lg" role="button">Menu Ator</a>
+							</div>
+						</div>	
+
+					</fieldset>
+				<!-- col-sm-12 -->
+				</div> 
+				<!-- row -->
+			</form>
 		</div>
+	</div>
+	
+	
+	
+	
 		
-		<div class = "row center">
-			<a href="/times/" class = "btn-large waves-effect waves-light teal">Gerenciar Times</a>
-			<a href="/jogadores/" class = "btn-large waves-effect waves-light teal">Gerenciar Jogadores</a>
-		</div>
-	</div>	
-		
-	<script src="/webjars/jquery/2.2.4/jquery.js"></script>
-	<script src="/webjars/materializecss/0.97.7/js/materialize.js"></script>
+	<script src="js/jquery.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" 
+		integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 
 </html>
