Add interface Genero working

--- a/src/main/resources/templates/genero.html
+++ b/src/main/resources/templates/genero.html
@@ -13,7 +13,7 @@
 	<div class="jumbotron">
 		<div class="container">
 			<h1>Cinema WEB</h1>
-			<h3 class = "header col s12 light">Gênero - PÁGINA PARA O GERENCIAMENTO DOS GÊNEROS DE FILMES</h3> 
+			<h3 style="color:darkgreen">Gênero - PÁGINA PARA O GERENCIAMENTO DOS GÊNEROS DE FILMES</h3> 
 		</div>
 	</div>
 	
@@ -26,12 +26,16 @@
 							<legend>Preencha os dados pedidos</legend>
 							<div class="form-group col-md-4">
 								<label for="genero">Nome do Gênero</label>
-								<input type="text" class="form-control" id="genero" name="genero" autofocus/>
+								<input type="text" placeholder="Nome do Genero" class="form-control" id="genero" name="nomeGenero" autofocus/>
+							</div>
+							
+							<div class="form-group col-md-4">
+								<button type="submit" name="action" class="btn btn-success btn-lg btn-block">Adicionar Gênero</button>
 							</div>
 						</fieldset>
 					<!-- col-sm-12 -->
 					</div> 
-						<!-- row -->
+					<!-- row -->
 				</form>
 			</div>
 			<!-- row SALVAR SESSOES-->
