--- a/src/main/resources/templates/genero.html
+++ b/src/main/resources/templates/genero.html
@@ -1,71 +1,168 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8">
-	 <link href="css/bootstrap.min.css" rel="stylesheet">
-	 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
-	 		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	 <meta charset="utf-8">
-	 
-	<title>Gênero</title>
+<meta charset="UTF-8">
+<link href="css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+	integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+	crossorigin="anonymous">
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script
+	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+<meta charset="utf-8">
+
+<title>Gênero</title>
 </head>
 <body>
 	<div class="jumbotron">
 		<div class="container">
 			<h1>Cinema WEB</h1>
-			<h3 style="color:darkgreen">Gênero - PÁGINA PARA O GERENCIAMENTO DOS GÊNEROS DE FILMES</h3> 
+			<h3 style="color: darkgreen">Gênero - PÁGINA PARA O
+				GERENCIAMENTO DOS GÊNEROS DE FILMES</h3>
 		</div>
 	</div>
-	
+
 	<div class="container">
-			
-			<div class = "row">
-				<form action="/genero/salvar" method="POST" class="col-sm-12 col-lg-12">
-					<div class = "row">
-						<fieldset>
-							<legend>Preencha os dados pedidos</legend>
-							<div class="form-group col-md-4">
-								<label for="genero">Nome do Gênero</label>
-								<input type="text" placeholder="Nome do Genero" class="form-control" id="genero" name="nomeGenero" autofocus/>
-							</div>
-							
-							<div class="form-group col-md-4">
-								<button type="submit" name="action" class="btn btn-success btn-lg btn-block">Adicionar Gênero</button>
-							</div>
-						</fieldset>
-					<!-- col-sm-12 -->
-					</div> 
-					<!-- row -->
-				</form>
-			</div>
-			<!-- row SALVAR SESSOES-->
-			<hr>
-			<div class = "row">
-				<div id="tabela" >
-				    <h3>Gêneros cadastrados</h3>
-			    	<table class="table table-hover">
-					   	 <thead>
-					      <tr>
-					        <th>ID</th>
-							<th>Nome</th>
-							<th>Excluir Gênero</th>
-					      </tr>
-					    </thead>
-					    
-					    <tbody>
-							<tr th:each="genero : ${generos}">
-								<td th:text="${genero.id}"></td>
-								<td th:text="${genero.nome}"></td>
-								<td><a class = "btn btn-sm  btn-danger" role="button"  th:href="@{/genero/excluir/{id}(id=${genero.id})}" 
-									 th:method="delete" value="delete">X</a></td>
-								
-							</tr>
-						</tbody>
-				  	</table>
+		<div class="row col-sm-12">
+			<div class="col-lg-12">
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<h2 class="panel-title">
+							<b>
+								<ul class="nav nav-tabs">
+									<li class="active"><a data-toggle="tab" href="#home">Inicio</a></li>
+									<li><a data-toggle="tab" href="#buscar">Buscar Genero</a></li>
+								</ul>
+							</b>
+						</h2>
+					</div>
+					<div class="panel-body">
+						<dl>
+							<hr></hr>
+							<dd>
+								<div class="tab-content">
+									<div id="home" class="tab-pane fade in active">
+										<h3>Neste Menu você poderá adicionar um novo gênero,
+											visualizar os gêneros existentes e remover um gênero do banco
+											através do botão do X.</h3>
+										<br> <br> <br>
+										<div class="container">
+
+											<div class="row">
+												<form action="/genero/salvar" method="POST"
+													class="col-sm-12 col-lg-12">
+													<div class="row">
+
+														<fieldset>
+															<legend>Preencha os dados pedidos</legend>
+															<div class="form-group col-md-4">
+																<label for="genero">Nome do Gênero</label> <input
+																	type="text" placeholder="Nome do Genero"
+																	class="form-control" id="genero" name="nomeGenero"
+																	autofocus />
+															</div>
+
+															<div class="form-group col-md-4">
+																<button type="submit" name="action"
+																	class="btn btn-success btn-lg btn-block">Adicionar
+																	Gênero</button>
+															</div>
+														</fieldset>
+														<!-- col-sm-12 -->
+													</div>
+													<!-- row -->
+												</form>
+											</div>
+											<!-- row SALVAR SESSOES-->
+											<hr>
+											<div class="row">
+												<div id="tabela">
+													<h3>Gêneros cadastrados</h3>
+													<table class="table table-hover">
+														<thead>
+															<tr>
+																<th>ID</th>
+																<th>Nome</th>
+																<th>Excluir Gênero</th>
+															</tr>
+														</thead>
+
+														<tbody>
+															<tr th:each="genero : ${generos}">
+																<td th:text="${genero.id}"></td>
+																<td th:text="${genero.nome}"></td>
+																<td><a class="btn btn-sm  btn-danger" role="button"
+																	th:href="@{/genero/excluir/{id}(id=${genero.id})}"
+																	th:method="delete" value="delete">X</a></td>
+
+															</tr>
+														</tbody>
+													</table>
+												</div>
+											</div>
+											<!-- row -->
+										</div>
+										<!-- container MOSTRAR SESSOES-->
+									</div>
+
+									<div id="buscar" class="tab-pane fade">
+										<h3>Neste Menu você poderá buscar um gênero, passando
+											o ID, do gênero o qual você quer buscar.</h3>
+										<br>
+										<br>
+										<br>
+										<div class="row">
+												<div id="tabela">
+													<h3>Gênero</h3>
+													<table class="table table-hover">
+														<thead>
+															<tr>
+																<th>ID</th>
+																<th>Nome</th>
+																<th>Excluir Gênero</th>
+															</tr>
+														</thead>
+
+														<tbody>
+															<tr th:each="genero : ${generos}">
+																<td th:text="${genero.id}"></td>
+																<td th:text="${genero.nome}"></td>
+																<td><a class="btn btn-sm  btn-danger" role="button"
+																	th:href="@{/genero/excluir/{id}(id=${genero.id})}"
+																	th:method="delete" value="delete">X</a></td>
+
+															</tr>
+														</tbody>
+													</table>
+												</div>
+											</div>
+											<!-- row -->
+										<!-- container -->
+									</div>
+									<!-- tab-pane -->
+								</div>
+								<!-- tab-content -->
+							</dd>
+
+							<dt>
+								<br></br>
+							</dt>
+						</dl>
+
+					</div>
+					<!-- panel-body -->
 				</div>
+				<!-- panel panel default -->
 			</div>
-			<!-- row -->
+			<!-- col-sm-12 -->
+
 		</div>
-		<!-- container MOSTRAR SESSOES-->
+		<!-- row -->
+	</div>
+	<!-- container -->
+
 </body>
 </html>
