--- a/src/main/resources/templates/genero.html
+++ b/src/main/resources/templates/genero.html
@@ -26,158 +26,150 @@
 	</div>
 
 	<div class="container">
-		<div class="row col-sm-12">
-			<div class="col-lg-12">
-				<div class="panel panel-default">
-					<div class="panel-heading">
-						<h2 class="panel-title">
-							<b>
-								<ul class="nav nav-tabs">
-									<li class="active"><a data-toggle="tab" href="#home">Inicio</a></li>
-									<li><a data-toggle="tab" href="#buscar">Buscar Genero</a></li>
-								</ul>
-							</b>
-						</h2>
-					</div>
-					<div class="panel-body">
-						<dl>
-							<hr></hr>
-							<dd>
-								<div class="tab-content">
-									<div id="home" class="tab-pane fade in active">
-										<h3>Neste Menu você poderá adicionar um novo gênero,
-											visualizar os gêneros existentes e remover um gênero do banco
-											através do botão do X.</h3>
-										<br> <br> <br>
-										<div class="container">
-
-											<div class="row">
-												<form action="/genero/salvar" method="POST"
-													class="col-sm-12 col-lg-12">
-													<div class="row">
-
-														<fieldset>
-															<legend>Preencha os dados pedidos</legend>
-															<div class="form-group col-md-4">
-																<label for="genero">Nome do Gênero</label> <input
-																	type="text" placeholder="Nome do Genero"
-																	class="form-control" id="genero" name="nomeGenero"
-																	autofocus />
-															</div>
-
-															<div class="form-group col-md-4">
-																<button type="submit" name="action"
-																	class="btn btn-success btn-lg btn-block">Adicionar
-																	Gênero</button>
-															</div>
-														</fieldset>
-														<!-- col-sm-12 -->
-													</div>
-													<!-- row -->
-												</form>
-											</div>
-											<!-- row SALVAR SESSOES-->
-											<hr>
-											<div class="row">
-												<div id="tabela">
-													<h3>Gêneros cadastrados</h3>
-													<table class="table table-hover">
-														<thead>
-															<tr>
-																<th>ID</th>
-																<th>Nome</th>
-																<th>Excluir Gênero</th>
-															</tr>
-														</thead>
-
-														<tbody>
-															<tr th:each="genero : ${generos}">
-																<td th:text="${genero.id}"></td>
-																<td th:text="${genero.nome}"></td>
-																<td><a class="btn btn-sm  btn-danger" role="button"
-																	th:href="@{/genero/excluir/{id}(id=${genero.id})}"
-																	th:method="delete" value="delete">X</a></td>
-
-															</tr>
-														</tbody>
-													</table>
-												</div>
-											</div>
-											<!-- row -->
-										</div>
-										<!-- container MOSTRAR SESSOES-->
-									</div>
-
-									<div id="buscar" class="tab-pane fade">
-										<h3>Neste Menu você poderá buscar um gênero, passando o
-											ID, do gênero o qual você quer buscar.</h3>
-										<br> <br> <br>
-										<div class="row">
-											<div id="tabela">
-												<form action="/genero/buscar{id}" method="POST"
-													class="col-sm-12 col-lg-12">
-													<div class="row">
-
-														<fieldset>
-															<legend>Preencha os dados pedidos</legend>
-															<div class="form-group col-md-4">
-																<label for="genero">Nome do Gênero</label> <input
-																	type="text" placeholder="Nome do Genero"
-																	class="form-control" id="genero" name="nomeGenero"
-																	autofocus />
-															</div>
-
-															<div class="form-group col-md-4">
-																<button type="submit" name="action"
-																	class="btn btn-success btn-lg btn-block">Buscar
-																	Gênero</button>
-															</div>
-														</fieldset>
-														<!-- col-sm-12 -->
-													</div>
-													<!-- row -->
-												</form>
-
-												<h3>Gênero</h3>
-												<table class="table table-hover">
-													<thead>
-														<tr>
-															<th>ID</th>
-															<th>Nome</th>
-															<th>Excluir Gênero</th>
-														</tr>
-													</thead>
-
-													<tbody>
-
-													</tbody>
-												</table>
-											</div>
-										</div>
-										<!-- row -->
-										<!-- container -->
-									</div>
-									<!-- tab-pane -->
-								</div>
-								<!-- tab-content -->
-							</dd>
-
-							<dt>
-								<br></br>
-							</dt>
-						</dl>
-
-					</div>
-					<!-- panel-body -->
-				</div>
-				<!-- panel panel default -->
-			</div>
-			<!-- col-sm-12 -->
-
-		</div>
+		<div class="row col-sm-12"></div>
 		<!-- row -->
 	</div>
 	<!-- container -->
+
+	<br>
+	<br>
+	<br>
+	<div class="container">
+		<div class="row  col-lg-12">
+
+			<fieldset>
+				<legend>MENU</legend>
+
+				<div class="form-group col-md-4">
+					<button type="submit" name="action"
+						class="btn btn-success  btn-block">VISUALIZAR GÊNEROS</button>
+					<label>Aqui você poderá excluir, visualizar e atualizar os
+						gêneros mostrados através dos botões.</label>
+				</div>
+				<div class="form-group col-md-4">
+					<button type="submit" name="action"
+						class="btn btn-success  btn-block">BUSCAR GÊNERO</button>
+					<label>Aqui você poderá buscar um gênero específico.</label>
+				</div>
+			</fieldset>
+
+			<!-- col-sm-12 -->
+			<hr></hr>
+		</div>
+		<!-- row -->
+
+
+		<div class="row">
+			<form action="/genero/salvar" method="POST" class="col-sm-12 col-lg-12">
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<div class="row">
+
+					<fieldset>
+
+						<legend>Preencha os dados pedidos</legend>
+						<div class="form-group col-md-4">
+							<label for="genero">Nome do Gênero</label> <input type="text"
+								placeholder="Nome do Genero" class="form-control" id="genero"
+								name="nomeGenero" autofocus />
+						</div>
+
+						<div class="form-group col-md-4">
+							<button type="submit" name="action"
+								class="btn btn-success btn-lg btn-block">Adicionar
+								Gênero</button>
+						</div>
+					</fieldset>
+					<!-- col-sm-12 -->
+				</div>
+				<!-- row -->
+			</form>
+		</div>
+		<!-- row SALVAR SESSOES-->
+		<hr>
+		<div class="row">
+			<div id="tabela">
+				<h3>Gêneros cadastrados</h3>
+				<table class="table table-hover">
+					<thead>
+						<tr>
+							<th>ID</th>
+							<th>Nome</th>
+							<th>Atualizar</th>
+							<th>Excluir Gênero</th>
+						</tr>
+					</thead>
+
+					<tbody>
+						<tr th:each="genero : ${generos}">
+							<td th:text="${genero.id}"></td>
+							<td th:text="${genero.nome}"></td>
+							<td><a class="btn btn-primary"
+								th:href="@{/genero/atualizar/{id}(id = ${genero.id})}">Atualizar
+							</a></td>
+							<td><a class="btn btn-sm  btn-danger"
+								th:href="@{/genero/excluir/{id}(id=${genero.id})}">X</a></td>
+
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
+		<!-- row -->
+
+		<hr>
+		<div class="row">
+			<form action="/genero/buscar{id}" method="POST"
+				class="col-sm-12 col-lg-12">
+				<div class="row">
+					<h3>Buscar Gênero</h3>
+					<fieldset>
+						<div class="form-group col-md-4">
+							<label for="genero">Nome do Gênero</label> 
+							<input type="text" placeholder="ID do Genero" class="form-control" id="idGenero"
+								name="idGenero" autofocus />
+						</div>
+
+						<div class="form-group col-md-4">
+							<button type="submit" name="action"
+								class="btn btn-success btn-lg btn-block">Buscar Gênero</button>
+						</div>
+					</fieldset>
+					<!-- col-sm-12 -->
+				</div>
+				<!-- row -->
+			</form>
+			
+			<div id="tabela">
+				<table class="table table-hover">
+					<thead>
+						<tr>
+							<th>ID</th>
+							<th>Nome</th>
+							<th>Atualizar</th>
+							<th>Excluir Gênero</th>
+						</tr>
+					</thead>
+
+					<tbody th:if="${generoRetorno} != null">
+						<tr th:object="${generoRetorno}">
+							<td th:text="${generoRetorno.id}"></td>
+							<td th:text="${generoRetorno.nome}"></td>
+							<td><a class="btn btn-primary" th:href="@{/genero/atualizar/{id}(id = ${generoRetorno.id})}">Atualizar </a></td>
+							<td><a class="btn btn-sm  btn-danger" th:href="@{/genero/excluir/{id}(id=${generoRetorno.id})}">X</a></td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
+		<!-- row -->
+	</div>
+	<!-- container MOSTRAR SESSOES-->
+
 
 </body>
 </html>
