--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -45,11 +45,7 @@
 		</div>
 	</div>
 	
-	
-	
-	
-		
-	<script src="js/jquery.min.js"></script>
+s	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" 
