--- a/src/main/resources/templates/formulario-sala.html
+++ b/src/main/resources/templates/formulario-sala.html
@@ -7,37 +7,55 @@
 <link rel="stylesheet"
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
 	integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-	crossorigin="anonymous"><link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css" />
+	crossorigin="anonymous">
 
 
 </head>
 <body>
 
-<div class="jumbotron">
+	<div class="jumbotron">
 		<div class="container">
 			<h1>Cinema WEB</h1>
-			<h3 style="color: darkgreen">sala - PÁGINA PARA A
-				ATUALIAÇÃO DAS SALAS DO CINEMA</h3>
+			<h3 style="color: darkgreen">Sala - PÁGINA PARA A ATUALIAÇÃO DAS
+				SALAS DO CINEMA</h3>
 		</div>
 	</div>
 
-<form method="POST" action="/sala/salvar" th:object="${sala}" class="col-lg-6">
-<input type="hidden" th:field="*{id}">
+	<form method="POST" action="/sala/salvar" th:object="${sala}"
+		class="col-lg-6">
+		<input type="hidden" th:field="*{id}">
 
-  <div class="form-group">
-    <label class="h1" for="sala">Nome</label>
-    <input type="text" class="form-control" id="nome" name="nome" placeholder="Digite o novo nome">
-  </div>
-  
-  <div class="form-group">
-    <label class="h1" for="sala">Sobre</label>
-    <input type="text" class="form-control" id="sobre" name="sobre" placeholder="Digite o novo sobre">
-  </div>
-  
-  <button type="submit" class="btn btn-lg btn-primary">Enviar</button>
-</form>
+		<div class="form-group">
+			<label class="h1" for="sala">Nome Sala</label> <input type="text"
+				class="form-control" id="nome" name="nome"
+				placeholder="Digite o novo nome">
+		</div>
+
+		<div class="form-group input-group mb-3">
+			<div class="input-group-prepend">
+				<label class="input-group-text" for="inputGroupSelect01">Tipos
+					de Sala</label>
+			</div>
+			<select class="custom-select" id="inputGroupSelect01" name="tipo">
+				<option disabled="disabled" selected="selected">Escolha o
+					tipo</option>
+				<option value="D2">2D</option>
+				<option value="D3">3D</option>
+			</select>
+		</div>
+
+		<div class="form-group">
+			<label class="h1" for="sala">Capacidade</label> <input type="number"
+				class="form-control" id="capacidade" name="capacidade"
+				placeholder="Digite a nova capacidade">
+		</div>
+
+		<button type="submit" class="btn btn-lg btn-primary">Enviar</button>
+	</form>
 
 
-<script src="/js/bootstrap.min.js">  </script>
+	<script src="/js/bootstrap.min.js">
+		
+	</script>
 </body>
 </html>
