--- a/src/main/resources/templates/sala.html
+++ b/src/main/resources/templates/sala.html
@@ -16,8 +16,8 @@
 	<div class="jumbotron">
 		<div class="container">
 			<h1>Cinema WEB</h1>
-			<h3 style="color: darkgreen">Salas - PÁGINA PARA O
-				GERENCIAMENTO DAS SALAS DO CINEMA</h3>
+			<h3 style="color: darkgreen">Salas - PÁGINA PARA O GERENCIAMENTO
+				DAS SALAS DO CINEMA</h3>
 		</div>
 	</div>
 
@@ -64,29 +64,29 @@
 								placeholder="Nome da sala" class="form-control" id="nome"
 								name="nome" autofocus />
 						</div>
-						
-						<div class="form-group col-md-4">
-							<label for="sala">Sobre a Sala</label> <input type="text"
-								placeholder="Sobre o diretor" class="form-control" id="sobre"
-								name="sobre" autofocus />
+
+						<div class="form-group col-md-2">
+							<div class="input-group mb-3">
+								<div class="input-group-prepend">
+									<label class="input-group-text" for="inputGroupSelect01">Tipos de Sala</label>
+								</div>
+								<select class="custom-select" id="inputGroupSelect01" name="tipo">
+									<option disabled="disabled" selected="selected">Escolha o tipo</option>
+									<option value="D2">2D</option>
+									<option value="D3">3D</option>
+								</select>
+							</div>
 						</div>
-						
-						<div class="form-group col-md-4">
-							<label for="sala">Sobre a Sala</label> <input type="text"
-								placeholder="Sobre o diretor" class="form-control" id="sobre"
-								name="sobre" autofocus />
-						</div>
-						
+
 						<div class="form-group col-md-4">
 							<label for="sala">Capacidade</label> <input type="number"
-								placeholder="Digite a capacidade" class="form-control" id="capacidade"
-								name="capacidade" autofocus />
+								placeholder="Digite a capacidade" class="form-control"
+								id="capacidade" name="capacidade" />
 						</div>
 
 						<div class="form-group col-md-4">
 							<button type="submit" name="action"
-								class="btn btn-success btn-lg btn-block">Adicionar
-								Sala</button>
+								class="btn btn-success btn-lg btn-block">Adicionar Sala</button>
 						</div>
 					</fieldset>
 					<!-- col-sm-12 -->
@@ -104,7 +104,8 @@
 						<tr>
 							<th>ID</th>
 							<th>Nome</th>
-							<th>Sobre</th>
+							<th>Tipo</th>
+							<th>Capacidade</th>
 							<th>Atualizar</th>
 							<th>Excluir</th>
 						</tr>
@@ -114,13 +115,13 @@
 						<tr th:each="sala : ${salas}">
 							<td th:text="${sala.id}"></td>
 							<td th:text="${sala.nome}"></td>
-							<td th:text="${sala.sobre}"></td>
+							<td th:text="${sala.tipo}"></td>
+							<td th:text="${sala.capacidade}"></td>
 							<td><a class="btn btn-primary"
 								th:href="@{/sala/atualizar/{id}(id = ${sala.id})}">Atualizar
 							</a></td>
 							<td><a class="btn btn-sm  btn-danger"
 								th:href="@{/sala/excluir/{id}(id=${sala.id})}">X</a></td>
-
 						</tr>
 					</tbody>
 				</table>
