--- a/src/main/resources/templates/formulario-genero.html
+++ b/src/main/resources/templates/formulario-genero.html
@@ -25,7 +25,7 @@
 
   <div class="form-group">
     <label class="h1" for="nomeGen">Nome</label>
-    <input type="text" class="form-control" id="nomeGen" name="nome" placeholder="Digite o novo gênero">
+    <input type="text" class="form-control" id="nomeGen"  th:field="*{nome}" placeholder="Digite o novo gênero">
   </div>
   
   <button type="submit" class="btn btn-lg btn-primary">Enviar</button>
