--- a/src/main/resources/templates/formulario-diretor.html
+++ b/src/main/resources/templates/formulario-diretor.html
@@ -26,12 +26,12 @@
 
   <div class="form-group">
     <label class="h1" for="diretor">Nome</label>
-    <input type="text" class="form-control" id="nome" name="nome" placeholder="Digite o novo nome">
+    <input type="text" class="form-control" id="nome"  th:field="*{nome}"placeholder="Digite o novo nome">
   </div>
   
   <div class="form-group">
     <label class="h1" for="diretor">Sobre</label>
-    <input type="text" class="form-control" id="sobre" name="sobre" placeholder="Digite o novo sobre">
+    <input type="text" class="form-control" id="sobre"  th:field="*{sobre}" placeholder="Digite o novo sobre">
   </div>
   
   <button type="submit" class="btn btn-lg btn-primary">Enviar</button>
