--- a/src/main/resources/templates/filme.html
+++ b/src/main/resources/templates/filme.html
@@ -10,14 +10,14 @@
 
 <meta charset="utf-8">
 
-<title>Sala</title>
+<title>Filme</title>
 </head>
 <body>
 	<div class="jumbotron">
 		<div class="container">
 			<h1>Cinema WEB</h1>
-			<h3 style="color: darkgreen">Salas - PÁGINA PARA O GERENCIAMENTO
-				DAS SALAS DO CINEMA</h3>
+			<h3 style="color: darkgreen">Filmes - PÁGINA PARA O
+				GERENCIAMENTO DAS FILMES DO CINEMA</h3>
 		</div>
 	</div>
 
@@ -51,7 +51,7 @@
 		<!-- row -->
 
 		<div class="row">
-			<form action="/sala/salvar" th:object="${sala}" method="POST"
+			<form action="/filme/salvar" th:object="${filme}" method="POST"
 				class="col-sm-12 col-lg-12">
 				<br> <br> <br> <br> <br> <br>
 				<div class="row">
@@ -60,33 +60,49 @@
 
 						<legend>Preencha os dados pedidos</legend>
 						<div class="form-group col-md-4">
-							<label for="sala">Nome da Sala</label> <input type="text"
-								placeholder="Nome da sala" class="form-control" id="nome"
+							<label for="filme">Nome do Filme</label> <input type="text"
+								placeholder="Nome do filme" class="form-control" id="nome"
 								name="nome" autofocus />
 						</div>
 
-						<div class="form-group col-md-2">
+						<div class="form-group col-md-4">
+							<!-- <label for="filme">Sinopse do Filme</label> <input type="text"
+								placeholder="Sinopse do filme" class="form-control" id="sinopse"
+								name="sinopse" autofocus /> -->
+
+							<label for="filme">Sinopse do Filme</label>
+							<textarea class="form-control" name="sinopse" rows="4" cols="50"
+								autofocus>
+							
+							</textarea>
+						</div>
+
+						<div class="form-group col-md-4">
+							<label for="filme">Duração do Filme</label> <input type="number"
+								placeholder="Nome do filme" class="form-control" id="duracao"
+								name="duracao" autofocus />
+						</div>
+
+						<!-- <div class="form-group col-md-2">
 							<div class="input-group mb-3">
 								<div class="input-group-prepend">
-									<label class="input-group-text" for="inputGroupSelect01">Tipos de Sala</label>
+									<label class="input-group-text" for="inputGroupSelect01">Tipos
+										de Filme</label>
 								</div>
-								<select class="custom-select" id="inputGroupSelect01" name="tipo">
-									<option disabled="disabled" selected="selected">Escolha o tipo</option>
+								<select class="custom-select" id="inputGroupSelect01"
+									name="tipo">
+									<option disabled="disabled" selected="selected">Escolha
+										o tipo</option>
 									<option value="D2">2D</option>
 									<option value="D3">3D</option>
 								</select>
 							</div>
-						</div>
-
-						<div class="form-group col-md-4">
-							<label for="sala">Capacidade</label> <input type="number"
-								placeholder="Digite a capacidade" class="form-control"
-								id="capacidade" name="capacidade" />
-						</div>
+						</div> -->
 
 						<div class="form-group col-md-4">
 							<button type="submit" name="action"
-								class="btn btn-success btn-lg btn-block">Adicionar Sala</button>
+								class="btn btn-success btn-lg btn-block">Adicionar
+								Filme</button>
 						</div>
 					</fieldset>
 					<!-- col-sm-12 -->
@@ -98,30 +114,33 @@
 		<hr>
 		<div class="row">
 			<div id="tabela">
-				<h3>Salas cadastradas</h3>
+				<h3>Filmes cadastrados</h3>
 				<table class="table table-hover">
 					<thead>
 						<tr>
 							<th>ID</th>
 							<th>Nome</th>
-							<th>Tipo</th>
-							<th>Capacidade</th>
+							<th>Sinopse</th>
+							<th>Duracao</th>
+							<th>Detalhes</th>
 							<th>Atualizar</th>
 							<th>Excluir</th>
 						</tr>
 					</thead>
 
 					<tbody>
-						<tr th:each="sala : ${salas}">
-							<td th:text="${sala.id}"></td>
-							<td th:text="${sala.nome}"></td>
-							<td th:text="${sala.tipo}"></td>
-							<td th:text="${sala.capacidade}"></td>
+						<tr th:each="filme : ${filmes}">
+							<td th:text="${filme.id}"></td>
+							<td th:text="${filme.nome}"></td>
+							<td th:text="${filme.sinopse}"></td>
+							<td th:text="${filme.duracao}"></td>
+							<td><a class="btn btn-success" role="button"
+								th:href="@{${'/filme/'+filme.id}}">Ver detalhes</a></td>
 							<td><a class="btn btn-primary"
-								th:href="@{/sala/atualizar/{id}(id = ${sala.id})}">Atualizar
+								th:href="@{/filme/atualizar/{id}(id = ${filme.id})}">Atualizar
 							</a></td>
 							<td><a class="btn btn-sm  btn-danger"
-								th:href="@{/sala/excluir/{id}(id=${sala.id})}">X</a></td>
+								th:href="@{/filme/excluir/{id}(id = ${filme.id})}">X</a></td>
 						</tr>
 					</tbody>
 				</table>
