filme complete total

--- a/src/main/resources/templates/sala.html
+++ b/src/main/resources/templates/sala.html
@@ -80,7 +80,7 @@
 
 						<div class="form-group col-md-4">
 							<label for="sala">Capacidade</label> <input type="number"
-								placeholder="Digite a capacidade" class="form-control"
+								value="0" placeholder="Digite a capacidade" class="form-control"
 								id="capacidade" name="capacidade" />
 						</div>
 
