--- a/src/main/resources/templates/detalhes-filme.html
+++ b/src/main/resources/templates/detalhes-filme.html
@@ -59,171 +59,176 @@
 		</div>
 		<!-- row -->
 	</div>
-
 	<br>
 	<br>
 	<br>
-
 	<div class="container">
 		<div class="row valign-wrapper">
 			<div class="col-lg-6">
 				<h3>
 					Detalhes de <span th:text="${filme.nome}"></span>
+					<hr>
 				</h3>
+				<br> <br>
+
 			</div>
 
 		</div>
 		<!-- row valign-wrapper -->
 
-		<div class="row">
-			<form th:action="@{${'/filme/'+filme.id+'/adicionarAtor'}}"
-				method="POST">
-				<div class="col-lg-8">
-					<label>Escolha um ator</label> <select class="browser-default"
-						id="atorID" name="idAtor">
-						<option value="" disabled="disabled" selected="selected">Escolha
-							um ator</option>
-						<option th:each="ator : ${atores}" th:value="${ator.id}"
-							th:text="${ator.nome}"></option>
-					</select>
-				</div>
-				<!-- col lg 8 -->
-
-				<div class="form-group col-md-4">
-					<button type="submit" name="action"
-						class="btn btn-success btn-lg btn-block">Adicionar ator
-						ao Filme</button>
-				</div>
-			</form>
-		</div>
-		<!-- row -->
-		<div class="row">
-			<div id="tabela">
-				<hr>
+		<div class="container" style="background-color: #F5F5F5; padding-left:30px;">
+			<div class="row">
 				<h3>Atores do Filme</h3>
-				<table class="table table-hover">
-					<thead>
-						<tr>
-							<th>ID</th>
-							<th>Nome</th>
-							<th>Sobre</th>
-							<th>Excluir do Filme</th>
-						</tr>
-					</thead>
+				<br>
+				<form th:action="@{${'/filme/'+filme.id+'/adicionarAtor'}}"
+					method="POST">
+					<div class="col-lg-8">
+						<label>Escolha um ator</label> <select class="browser-default"
+							id="atorID" name="idAtor">
+							<option value="" disabled="disabled" selected="selected">Escolha
+								um ator</option>
+							<option th:each="ator : ${atores}" th:value="${ator.id}"
+								th:text="${ator.nome}"></option>
+						</select>
+					</div>
+					<!-- col lg 8 -->
 
-					<tbody>
-						<tr th:each="ator : ${filme.atores}">
-							<td th:text="${ator.id}"></td>
-							<td th:text="${ator.nome}"></td>
-							<td th:text="${ator.sobre}"></td>
-							<td><a class="btn btn-sm btn-danger"
-								th:href="@{${'/filme/'+filme.id+'/removerAtor/'+ator.id}}">X</a></td>
-						</tr>
-					</tbody>
-				</table>
+					<div class="form-group col-md-4">
+						<button type="submit" name="action"
+							class="btn btn-success btn-lg btn-block">Adicionar ator
+							ao Filme</button>
+					</div>
+				</form>
 			</div>
-		</div>
-		<!-- row -->
+			<!-- row -->
+			<div class="row">
+				<div id="tabela">
+					<table class="table table-hover">
+						<thead>
+							<tr>
+								<th>ID</th>
+								<th>Nome</th>
+								<th>Sobre</th>
+								<th>Excluir do Filme</th>
+							</tr>
+						</thead>
 
-		<div class="row">
-			<form th:action="@{${'/filme/'+filme.id+'/adicionarDiretor'}}"
-				method="POST">
-				<div class="col-lg-8">
-					<label>Escolha um diretor</label> <select class="browser-default"
-						id="DiretorID" name="idDiretor">
-						<option value="" disabled="disabled" selected="selected">Escolha
-							um diretor</option>
-						<option th:each="diretor : ${diretores}" th:value="${diretor.id}"
-							th:text="${diretor.nome}"></option>
-					</select>
+						<tbody>
+							<tr th:each="ator : ${filme.atores}">
+								<td th:text="${ator.id}"></td>
+								<td th:text="${ator.nome}"></td>
+								<td th:text="${ator.sobre}"></td>
+								<td><a class="btn btn-sm btn-danger"
+									th:href="@{${'/filme/'+filme.id+'/removerAtor/'+ator.id}}">X</a></td>
+							</tr>
+						</tbody>
+					</table>
 				</div>
-				<!-- col lg 8 -->
-
-				<div class="form-group col-md-4">
-					<button type="submit" name="action"
-						class="btn btn-success btn-lg btn-block">Adicionar
-						diretor ao Filme</button>
-				</div>
-			</form>
+			</div>
+			<!-- row -->
 		</div>
-		<!-- row -->
-		<div class="row">
-			<div id="tabela">
-				<hr>
+		<br>
+		<div class="container" style="background-color: #F5F5F5; padding-left:30px;">
+			<div class="row">
 				<h3>Diretores do Filme</h3>
-				<table class="table table-hover">
-					<thead>
-						<tr>
-							<th>ID</th>
-							<th>Nome</th>
-							<th>Sobre</th>
-							<th>Excluir do Filme</th>
-						</tr>
-					</thead>
+				<br>
+				<form th:action="@{${'/filme/'+filme.id+'/adicionarDiretor'}}"
+					method="POST">
+					<div class="col-lg-8">
+						<label>Escolha um diretor</label> <select class="browser-default"
+							id="DiretorID" name="idDiretor">
+							<option value="" disabled="disabled" selected="selected">Escolha
+								um diretor</option>
+							<option th:each="diretor : ${diretores}" th:value="${diretor.id}"
+								th:text="${diretor.nome}"></option>
+						</select>
+					</div>
+					<!-- col lg 8 -->
 
-					<tbody>
-						<tr th:each="diretor : ${filme.diretores}">
-							<td th:text="${diretor.id}"></td>
-							<td th:text="${diretor.nome}"></td>
-							<td th:text="${diretor.sobre}"></td>
-							<td><a class="btn btn-sm btn-danger"
-								th:href="@{${'/filme/'+filme.id+'/removerDiretor/'+diretor.id}}">X</a></td>
-						</tr>
-					</tbody>
-				</table>
+					<div class="form-group col-md-4">
+						<button type="submit" name="action"
+							class="btn btn-success btn-lg btn-block">Adicionar
+							diretor ao Filme</button>
+					</div>
+				</form>
 			</div>
-		</div>
-		<!-- row -->
-		
-		<div class="row">
-			<form th:action="@{${'/filme/'+filme.id+'/adicionarGenero'}}"
-				method="POST">
-				<div class="col-lg-8">
-					<label>Escolha um Gênero</label> <select class="browser-default"
-						id="GeneroID" name="idGenero">
-						<option value="" disabled="disabled" selected="selected">Escolha
-							um genero</option>
-						<option th:each="genero : ${generos}" th:value="${genero.id}"
-							th:text="${genero.nome}"></option>
-					</select>
-				</div>
-				<!-- col lg 8 -->
+			<!-- row -->
+			<div class="row">
+				<div id="tabela">
+					<table class="table table-hover">
+						<thead>
+							<tr>
+								<th>ID</th>
+								<th>Nome</th>
+								<th>Sobre</th>
+								<th>Excluir do Filme</th>
+							</tr>
+						</thead>
 
-				<div class="form-group col-md-4">
-					<button type="submit" name="action"
-						class="btn btn-success btn-lg btn-block">Adicionar
-						Genero ao Filme</button>
+						<tbody>
+							<tr th:each="diretor : ${filme.diretores}">
+								<td th:text="${diretor.id}"></td>
+								<td th:text="${diretor.nome}"></td>
+								<td th:text="${diretor.sobre}"></td>
+								<td><a class="btn btn-sm btn-danger"
+									th:href="@{${'/filme/'+filme.id+'/removerDiretor/'+diretor.id}}">X</a></td>
+							</tr>
+						</tbody>
+					</table>
 				</div>
-			</form>
+			</div>
+			<!-- row -->
 		</div>
-		<!-- row -->
-		<div class="row">
-			<div id="tabela">
-				<hr>
+		<br>
+		<div class="container" style="background-color: #F5F5F5; padding-left:30px;">
+			<div class="row">
 				<h3>Generos do Filme</h3>
-				<table class="table table-hover">
-					<thead>
-						<tr>
-							<th>ID</th>
-							<th>Nome</th>
-							<th>Sobre</th>
-							<th>Excluir do Filme</th>
-						</tr>
-					</thead>
+				<br>
+				<form th:action="@{${'/filme/'+filme.id+'/adicionarGenero'}}"
+					method="POST">
+					<div class="col-lg-8">
+						<label>Escolha um Gênero</label> <select class="browser-default"
+							id="GeneroID" name="idGenero">
+							<option value="" disabled="disabled" selected="selected">Escolha
+								um genero</option>
+							<option th:each="genero : ${generos}" th:value="${genero.id}"
+								th:text="${genero.nome}"></option>
+						</select>
+					</div>
+					<!-- col lg 8 -->
 
-					<tbody>
-						<tr th:each="genero : ${filme.generos}">
-							<td th:text="${genero.id}"></td>
-							<td th:text="${genero.nome}"></td>
-							<td th:text="${genero.sobre}"></td>
-							<td><a class="btn btn-sm btn-danger"
-								th:href="@{${'/filme/'+filme.id+'/removerGenero/'+genero.id}}">X</a></td>
-						</tr>
-					</tbody>
-				</table>
+					<div class="form-group col-md-4">
+						<button type="submit" name="action"
+							class="btn btn-success btn-lg btn-block">Adicionar
+							Genero ao Filme</button>
+					</div>
+				</form>
 			</div>
+			<!-- row -->
+			<div class="row">
+				<div id="tabela">
+					<table class="table table-hover">
+						<thead>
+							<tr>
+								<th>ID</th>
+								<th>Nome</th>
+								<th>Excluir do Filme</th>
+							</tr>
+						</thead>
+
+						<tbody>
+							<tr th:each="genero : ${filme.generos}">
+								<td th:text="${genero.id}"></td>
+								<td th:text="${genero.nome}"></td>
+								<td><a class="btn btn-sm btn-danger"
+									th:href="@{${'/filme/'+filme.id+'/removerGenero/'+genero.id}}">X</a></td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</div>
+			<!-- row -->
 		</div>
-		<!-- row -->
 	</div>
 </body>
 </html>
