completo total filme

--- a/src/main/resources/templates/filme.html
+++ b/src/main/resources/templates/filme.html
@@ -66,10 +66,6 @@
 						</div>
 
 						<div class="form-group col-md-4">
-							<!-- <label for="filme">Sinopse do Filme</label> <input type="text"
-								placeholder="Sinopse do filme" class="form-control" id="sinopse"
-								name="sinopse" autofocus /> -->
-
 							<label for="filme">Sinopse do Filme</label>
 							<textarea class="form-control" name="sinopse" rows="4" cols="50"
 								autofocus>
@@ -79,8 +75,8 @@
 
 						<div class="form-group col-md-4">
 							<label for="filme">Duração do Filme</label> <input type="number"
-								placeholder="Nome do filme" class="form-control" id="duracao"
-								name="duracao" autofocus />
+								placeholder="Duração do filme" class="form-control" id="duracao"
+								name="duracao"  />
 						</div>
 
 						<!-- <div class="form-group col-md-2">
