--- a/src/main/resources/templates/formulario-filme.html
+++ b/src/main/resources/templates/formulario-filme.html
@@ -16,38 +16,31 @@
 	<div class="jumbotron">
 		<div class="container">
 			<h1>Cinema WEB</h1>
-			<h3 style="color: darkgreen">Sala - PÁGINA PARA A ATUALIAÇÃO DAS
-				SALAS DO CINEMA</h3>
+			<h3 style="color: darkgreen">Filme - PÁGINA PARA A ATUALIAÇÃO
+				DOS FILMES DO CINEMA</h3>
 		</div>
 	</div>
 
-	<form method="POST" action="/sala/salvar" th:object="${sala}"
+	<form method="POST" action="/filme/salvar" th:object="${filme}"
 		class="col-lg-6">
 		<input type="hidden" th:field="*{id}">
 
 		<div class="form-group">
-			<label class="h1" for="sala">Nome Sala</label> <input type="text"
-				class="form-control" id="nome"  th:field="*{nome}"
-				placeholder="Digite o novo nome">
-		</div>
-
-		<div class="form-group input-group mb-3">
-			<div class="input-group-prepend">
-				<label class="input-group-text" for="inputGroupSelect01">Tipos
-					de Sala</label>
-			</div>
-			<select class="custom-select" id="inputGroupSelect01"  th:field="*{tipo}">
-				<option disabled="disabled" value="" selected="selected">Escolha o
-					tipo</option>
-				<option value="D2">2D</option>
-				<option value="D3">3D</option>
-			</select>
+			<label class="h1" for="filme">Nome Filme</label> <input type="text"
+				class="form-control" id="nome" th:field="*{nome}"
+				placeholder="Digite o novo nome" autofocus>
 		</div>
 
 		<div class="form-group">
-			<label class="h1" for="sala">Capacidade</label> <input type="number"
-				class="form-control" id="capacidade"  th:field="*{capacidade}"
-				placeholder="Digite a nova capacidade">
+			<label class="h1" for="filme">Sinopse Filme</label> <input
+				type="text" class="form-control" id="sinopse" th:field="*{sinopse}"
+				placeholder="Digite a nova sinopse">
+		</div>
+
+		<div class="form-group">
+			<label for="filme">Duração do Filme</label> <input type="number"
+				placeholder="Duração do filme" class="form-control" id="duracao"
+				th:field="*{duracao}"/>
 		</div>
 
 		<button type="submit" class="btn btn-lg btn-primary">Enviar</button>
