update button date

--- a/src/main/resources/templates/sessao.html
+++ b/src/main/resources/templates/sessao.html
@@ -153,11 +153,11 @@
 							<td><form action="/sessao/porData" method="POST"
 									class="col-sm-12 col-lg-12">
 									<label for="sessao">Buscar por Data</label> <input
-										type="text" class="form-control" id="genero" name="dataInicio"
+										type="text" class="form-control" id="genero" name="dataInicio" placeholder="data inicial"
 										autofocus />
 										<input
-										type="text" class="form-control" id="genero" name="dataFim"
-										autofocus />
+										type="text" class="form-control" id="genero" name="dataFim" placeholder="data final"
+										/>
 
 									<button type="submit" name="action"
 										class="btn btn-success btn-lg btn-block">Buscar
