--- a/src/main/resources/templates/sessao.html
+++ b/src/main/resources/templates/sessao.html
@@ -92,9 +92,9 @@
 					<thead>
 						<tr>
 							<th>ID</th>
-							<th>Nome</th>
-							<th>Sinopse</th>
-							<th>Duracao</th>
+							<th>Horario</th>
+							<th>Data Inicio</th>
+							<th>Data Fim</th>
 							<th>Detalhes</th>
 							<th>Atualizar</th>
 							<th>Excluir</th>
@@ -153,10 +153,10 @@
 							<td><form action="/sessao/porData" method="POST"
 									class="col-sm-12 col-lg-12">
 									<label for="sessao">Buscar por Data</label> <input
-										type="text" class="form-control" id="genero" name="dataInicio" placeholder="data inicial"
+										type="text" class="form-control" id="dataInicio" name="dataInicio" placeholder="data inicial"
 										autofocus />
 										<input
-										type="text" class="form-control" id="genero" name="dataFim" placeholder="data final"
+										type="text" class="form-control" id="dataFim" name="dataFim" placeholder="data final"
 										/>
 
 									<button type="submit" name="action"
