Busca por Genero

--- a/src/main/resources/templates/detalhes-sessao.html
+++ b/src/main/resources/templates/detalhes-sessao.html
@@ -44,9 +44,9 @@
 						<fieldset>
 							<div class="container ">
 								<div class="row center col-lg-12">
-									<a href="/cinema/" class="btn btn-success btn-lg col-lg-4">CINEMA</a>
+									<a href="/sessao/" class="btn btn-success btn-lg col-lg-4">SESSÃO</a>
 								</div>
-								<label>Clique no botão para retornar ao MENU cinema.</label>
+								<label>Clique no botão para retornar ao MENU Sessão.</label>
 							</div>
 						</fieldset>
 						<!-- col-sm-12 -->
@@ -176,7 +176,7 @@
 				</div>
 			</div>
 			<!-- row -->
-		</div>f
+		</div>
 	</div>
 </body>
 </html>
