--- a/src/main/resources/templates/sessao-generos.html
+++ b/src/main/resources/templates/sessao-generos.html
@@ -1,10 +1,96 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http//thymeleaf.org"
+	  xmlns:layout="http//www.ultraq.net.nz/thymeleaf/layout">
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<meta charset="UTF-8">
+<link href="css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+	integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+	crossorigin="anonymous">
+
+<meta charset="utf-8">
+
+<title>Sessao</title>
 </head>
 <body>
+	<div class="jumbotron">
+		<div class="container">
+			<h1>Cinema WEB</h1>
+			<h3 style="color: darkgreen">Sessoes - PÁGINA PARA O
+				GERENCIAMENTO DAS SESSOES DO CINEMA</h3>
+		</div>
+	</div>
+	<div class="container">
 
+		<div class="row  col-lg-12">
+			<fieldset>
+				<legend>MENU</legend>
+
+				<div class="form-group col-md-4">
+					<form class="col-sm-12 col-lg-12">
+						<fieldset>
+							<div class="container ">
+								<div class="row center col-lg-12">
+									<a href="/" class="btn btn-success btn-lg col-lg-4">HOME</a>
+								</div>
+								<label>Clique no botão para retornar ao MENU principal.</label>
+							</div>
+						</fieldset>
+					</form>
+				</div>
+				<div style="left: 10px;" class="form-group col-md-4">
+					<form class="col-sm-12 col-lg-12">
+						<fieldset>
+							<div class="container ">
+								<div class="row center col-lg-12">
+									<a href="/sessao/" class="btn btn-success btn-lg col-lg-4">SESSÃO</a>
+								</div>
+								<label>Clique no botão para retornar ao MENU cinema.</label>
+							</div>
+						</fieldset>
+						<!-- col-sm-12 -->
+					</form>
+				</div>
+			</fieldset>
+
+			<div class="row">
+			<div id="tabela">
+
+				<h3>Sessões cadastradas</h3>
+				<table class="table table-hover">
+					<thead>
+						<tr>
+							<th>ID</th>
+							<th>Horario</th>
+							<th>Data Inicio</th>
+							<th>Data Fim</th>
+							<th>Detalhes</th>
+						</tr>
+					</thead>
+
+					<tbody>
+						<tr th:each="sessao : ${sessoes}">
+							<td th:text="${sessao.id}"></td>
+							<td th:text="${sessao.horario}"></td>
+							<td th:text="${sessao.dataInicio}"></td>
+							<td th:text="${sessao.dataFim}"></td>
+							<td><a class="btn btn-success" role="button"
+								th:href="@{${'/sessao/'+sessao.id}}">Ver detalhes</a></td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
+		<!-- row -->
+			<!-- col-sm-12 -->
+			<hr></hr>
+		</div>
+		<!-- row -->
+	</div>
+
+	<br>
+	<br>
+	<br>
 </body>
 </html>
