--- a/src/main/resources/templates/sessao-busca.html
+++ b/src/main/resources/templates/sessao-busca.html
@@ -17,8 +17,8 @@
 	<div class="jumbotron">
 		<div class="container">
 			<h1>Cinema WEB</h1>
-			<h3 style="color: darkgreen">Sessoes - PÁGINA PARA O
-				GERENCIAMENTO DAS SESSOES DO CINEMA</h3>
+			<h3 style="color: darkgreen">Sessoes - PÁGINA PARA A
+				LISTAGEM DAS SESSOES DO CINEMA</h3>
 		</div>
 	</div>
 	<div class="container">
@@ -46,7 +46,7 @@
 								<div class="row center col-lg-12">
 									<a href="/sessao/" class="btn btn-success btn-lg col-lg-4">SESSÃO</a>
 								</div>
-								<label>Clique no botão para retornar ao MENU cinema.</label>
+								<label>Clique no botão para retornar ao MENU sessão.</label>
 							</div>
 						</fieldset>
 						<!-- col-sm-12 -->
