--- a/src/main/resources/templates/formulario-genero.html
+++ b/src/main/resources/templates/formulario-genero.html
@@ -8,7 +8,8 @@
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
 	integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
 	crossorigin="anonymous">
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.8/jquery.mask.js"></script>
 </head>
 <body>
 
@@ -31,6 +32,13 @@
   <button type="submit" class="btn btn-lg btn-primary">Enviar</button>
 </form>
 
+<script language="JavaScript">
+	$(document).ready(function(){
+		$('#nomeGen').mask('SSSSSSSSSSSSSSSSSSSSSSSSSSS');
+	});
+	
+
+ </script>	
 
 <script src="/js/bootstrap.min.js">  </script>
 </body>
