--- a/src/main/resources/templates/sessao.html
+++ b/src/main/resources/templates/sessao.html
@@ -8,6 +8,8 @@
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
 	integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
 	crossorigin="anonymous">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.8/jquery.mask.js"></script>
 
 <meta charset="utf-8">
 
@@ -182,8 +184,7 @@
 										type="text" class="form-control" id="filme" name="filme"
 										autofocus />
 
-									<button type="submit" name="action"
-										class="btn btn-success btn-lg btn-block">Buscar
+									<button type="submit" name="action"	class="btn btn-success btn-lg btn-block">Buscar
 										Filme</button>
 								</form>
 							</td>
@@ -202,6 +203,19 @@
 	<!-- container MOSTRAR SESSOES-->
 	
 <script language="JavaScript">
+	
+	$("#genero").keyup(function() {
+		var valor = $("#genero").val().replace(/[^a-zA-Z ]+/g,'');
+		$("#genero").val(valor);
+	});
+	$("#cidade").keyup(function() {
+		var valor = $("#cidade").val().replace(/[^a-zA-Z ]+/g,'');
+		$("#cidade").val(valor);
+	});
+	$("#filme").keyup(function() {
+		var valor = $("#filme").val().replace(/[^a-zA-Z ]+/g,'');
+		$("#filme").val(valor);
+	});
 
 	function mascara(t, mask){
 		 var i = t.value.length;
@@ -232,7 +246,6 @@
 			}
 		}
 	}
-
 
  </script>	
 </body>
