--- a/src/main/resources/templates/sala.html
+++ b/src/main/resources/templates/sala.html
@@ -133,5 +133,12 @@
 
 	</div>
 	<!-- container MOSTRAR SESSOES-->
+	
+	<script language="JavaScript">
+	$(document).ready(function(){
+		$('#nome').mask('SSSSSSSSSSSSSSSSSSSSSSSSSSS');
+	});
+
+ </script>	
 </body>
 </html>
