--- a/src/main/resources/templates/formulario-ator.html
+++ b/src/main/resources/templates/formulario-ator.html
@@ -8,6 +8,8 @@
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
 	integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
 	crossorigin="anonymous">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.8/jquery.mask.js"></script>
 
 
 </head>
@@ -37,6 +39,12 @@
   <button type="submit" class="btn btn-lg btn-primary">Enviar</button>
 </form>
 
+<script language="JavaScript">
+	$("#nome").keyup(function() {
+		var valor = $("#nome").val().replace(/[^a-zA-Z ]+/g,'');
+		$("#nome").val(valor);
+	});
+ </script>	
 
 <script src="/js/bootstrap.min.js">  </script>
 </body>
