--- a/src/main/resources/templates/formulario-cinema.html
+++ b/src/main/resources/templates/formulario-cinema.html
@@ -8,6 +8,8 @@
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
 	integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
 	crossorigin="anonymous">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.8/jquery.mask.js"></script>
 
 
 </head>
@@ -47,8 +49,19 @@
 	</form>
 
 
-	<script src="/js/bootstrap.min.js">
-		
-	</script>
+	<script src="/js/bootstrap.min.js"></script>
+	
+	<script language="JavaScript">
+	$("#nome").keyup(function() {
+		var valor = $("#nome").val().replace(/[^a-zA-Z 0-9]/g, '');
+		$("#nome").val(valor);
+	});
+	
+	$("#cidade").keyup(function() {
+		var valor = $("#cidade").val().replace(/[^a-zA-Z ]+/g,'');
+		$("#cidade").val(valor);
+	});
+
+ </script>	
 </body>
 </html>
